Nav principal finalizado, com todos os estilos necessario conforme prototipo do figma

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Bootcamp DNC</title>
 </head>
 <body>
-    <nav>
-        <div id="principal">
+    <nav id="principal">
+        <div id="menu">
             <a href="">Home</a>
-            <a href="">Ultimas Edições</a>
+            <a href="">Últimas Edições</a>
             <a href="">Requisitos para participar</a>
         </div>
         <button>Login</button>
