--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- IMPORTAÇÂO DE FONTE INTER -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Bootcamp DNC</title>
@@ -18,6 +19,53 @@
         </div>
         <button>Login</button>
     </nav>
-    
+    <section>
+        <header>
+            <h1>BOOTCAMP DNC</h1>
+            <h2>
+                Esse será um evento exclusivo para todos os alunos<br>
+                da <b>DNC</b>, que querem <span class="inverter_fundo">acelerar a carreira</span> com uma<br>
+                semana intensiva de conteúdo de mercado entre<br> 
+                <span class="inverter_fundo">BACK-END, FRONT-END & BANCO DE DADOS.</span>
+            </h2>
+        </header>
+        <form action="">
+            <div class="form-group">
+                <label for="">Nome:</label>
+                <input type="text" placeholder="Insira seu nome aqui">
+            </div>
+            <div class="form-group">
+                <label for="">Sobrenome:</label>
+                <input type="text" placeholder="Insira seu sobrenome aqui">
+            </div>
+            <div class="form-group">
+                <label for="">Área de Interesse:</label>
+                <div class="checkbox-itens">
+                        <input type="checkbox" value="front">
+                        <label>Front-End</label>
+
+                        <input type="checkbox" value="back">
+                        <label>Back-End</label>
+
+                        <input type="checkbox" value="bd">
+                        <label>Banco de Dados</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="">E-mail:</label>
+                <input type="email" placeholder="Insira seu e-mail aqui">
+            </div>
+            <div class="form-group">
+                <label for="">Telefone:</label>
+                <input type="text" placeholder="(99)9999-9999">
+            </div>
+            <div class="form-group">
+                <label for="">Insira uma frase criativa aqui:</label>
+                <input type="text" placeholder="Qual frase criativa você gostaria de falar? :)">
+            </div>
+
+            <input type="submit" value="Cadastrar">
+        </form>
+    </section>
 </body>
 </html>
