--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <section>
         <header>
-            <h1>BOOTCAMP DNC</h1>
+            <h1>Bootcamp dnc</h1>
             <h2>
                 Esse será um evento exclusivo para todos os alunos<br>
                 da <b>DNC</b>, que querem <span class="inverter_fundo">acelerar a carreira</span> com uma<br>
