Adicionando media query para mobile

--- a/index.html
+++ b/index.html
@@ -67,5 +67,63 @@
             <input type="submit" value="Cadastrar">
         </form>
     </section>
+
+    <footer>
+        <div class="linha1">
+            <nav>
+                <h5>Escolas</h5>
+                <ul>
+                    <li>
+                        <a href="-">Dados</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Projetos</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Marketing</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Produto</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Tecnologia</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav>
+                <h5>Sobre a DNC</h5>
+                <ul>
+                    <li>
+                        <a href="-">Trabalhe Conosco</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Assessoria de Imprensa</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="-">Relatório de Empregabilidade</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="endereco">
+                © 2024 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030
+            </div>
+        </div>
+        <div class="linha2">
+            <a href="">Termos de Uso e Política de Privacidade</a>
+        </div>
+    </footer>
+
 </body>
 </html>
