Refatora estilos CSS para melhorar responsividade

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                 </ul>
             </nav>
             <div class="endereco">
-                © 2024 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030
+                <img src="logo_dnc.png" alt="">
+                <p>© 2024 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030</p>
             </div>
         </div>
         <div class="linha2">
